--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -82,7 +82,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 4153883733766665045\n",
+      "incarnation: 15474730101125403084\n",
       "]\n"
      ]
     }
@@ -286,9 +286,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequence 1 in x\n",
+      "  Input:  [1 2 4 5 6 7 1 8 9]\n",
+      "  Output: [1 2 4 5 6 7 1 8 9 0]\n",
+      "Sequence 2 in x\n",
+      "  Input:  [10 11 12  2 13 14 15 16  3 17]\n",
+      "  Output: [10 11 12  2 13 14 15 16  3 17]\n",
+      "Sequence 3 in x\n",
+      "  Input:  [18 19  3 20 21]\n",
+      "  Output: [18 19  3 20 21  0  0  0  0  0]\n"
+     ]
+    }
+   ],
    "source": [
     "def pad(x, length=None):\n",
     "    \"\"\"\n",
@@ -298,7 +314,10 @@
     "    :return: Padded numpy array of sequences\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    padded_seq = pad_sequences(x, maxlen=length, padding = 'post')\n",
+    "    \n",
+    "    return padded_seq\n",
+    "\n",
     "tests.test_pad(pad)\n",
     "\n",
     "# Pad Tokenized output\n",
@@ -319,9 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Preprocessed\n",
+      "Max English sentence length: 15\n",
+      "Max French sentence length: 21\n",
+      "English vocabulary size: 199\n",
+      "French vocabulary size: 344\n"
+     ]
+    }
+   ],
    "source": [
     "def preprocess(x, y):\n",
     "    \"\"\"\n",
@@ -662,21 +693,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['[NbConvertApp] Converting notebook machine_translation.ipynb to html',\n",
-       " '[NbConvertApp] Writing 305996 bytes to machine_translation.html']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save before you run this cell!\n",
     "!!jupyter nbconvert *.ipynb"
