--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -552,9 +552,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 110288 samples, validate on 27573 samples\n",
+      "Epoch 1/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 9.1558 - acc: 0.0984 - val_loss: 7.8000 - val_acc: 0.1838\n",
+      "Epoch 2/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 7.0830 - acc: 0.2540 - val_loss: 6.4757 - val_acc: 0.3109\n",
+      "Epoch 3/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 6.2194 - acc: 0.3307 - val_loss: 6.0235 - val_acc: 0.3740\n",
+      "Epoch 4/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.9563 - acc: 0.3925 - val_loss: 5.8757 - val_acc: 0.4022\n",
+      "Epoch 5/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.8386 - acc: 0.4060 - val_loss: 5.7745 - val_acc: 0.4111\n",
+      "Epoch 6/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.7589 - acc: 0.4112 - val_loss: 5.7043 - val_acc: 0.4118\n",
+      "Epoch 7/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.7080 - acc: 0.4132 - val_loss: 5.6782 - val_acc: 0.4175\n",
+      "Epoch 8/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.6543 - acc: 0.4182 - val_loss: 5.6257 - val_acc: 0.4194\n",
+      "Epoch 9/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.6146 - acc: 0.4217 - val_loss: 5.5883 - val_acc: 0.4203\n",
+      "Epoch 10/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.5815 - acc: 0.4227 - val_loss: 5.5354 - val_acc: 0.4251\n",
+      "était préféré inde froid en froid en froid froid <PAD> en <PAD> en <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+     ]
+    }
+   ],
    "source": [
     "def embed_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
     "    \"\"\"\n",
@@ -566,18 +595,46 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    embed = Embedding(input_dim =english_vocab_size,\n",
-    "                     output_dim = french_vocab_size)\n",
+    "    learning_rate = 0.0001\n",
+    "\n",
+    "    inputs = Input(shape = input_shape[1:])\n",
     "    \n",
-    "    return None\n",
+    "    embed = Embedding(input_dim =english_vocab_size,\n",
+    "                     output_dim = output_sequence_length)(inputs)\n",
+    "    hidden = GRU(output_sequence_length,\n",
+    "                      return_sequences = True)(embed)\n",
+    "    outputs = Dense(french_vocab_size, \n",
+    "                   activation = 'softmax')(hidden)\n",
+    "    model = Model(inputs = inputs, outputs = outputs)\n",
+    "    model.compile(loss=sparse_categorical_crossentropy,\n",
+    "                  optimizer=Adam(learning_rate),\n",
+    "                  metrics=['accuracy'])\n",
+    "    \n",
+    "    \n",
+    "    return model\n",
     "tests.test_embed_model(embed_model)\n",
     "\n",
+    "# TODO: Reshape the input | Same as Model 1\n",
+    "tmp_x = pad(preproc_english_sentences, max_french_sequence_length)\n",
+    "tmp_x = tmp_x.reshape((-1, preproc_french_sentences.shape[-2], 1))\n",
     "\n",
-    "# TODO: Reshape the input\n",
+    "# TODO: Train the neural network | Same as Model 1\n",
+    "simple_rnn_model = simple_model(\n",
+    "    tmp_x.shape,\n",
+    "    max_french_sequence_length,\n",
+    "    english_vocab_size +1,\n",
+    "    french_vocab_size+1)\n",
+    "simple_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=10, validation_split=0.2)\n",
     "\n",
-    "# TODO: Train the neural network\n",
+    "# TODO: Print prediction(s) | Same as Model 1\n",
+    "print(logits_to_text(simple_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))\n",
     "\n",
-    "# TODO: Print prediction(s)"
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
