model 5 assertion error

--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -82,7 +82,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 3201393343018274706\n",
+      "incarnation: 9186541520146532073\n",
       "]\n"
      ]
     }
@@ -648,9 +648,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 110288 samples, validate on 27573 samples\n",
+      "Epoch 1/10\n",
+      "110288/110288 [==============================] - 112s 1ms/step - loss: 9.5190 - acc: 0.1164 - val_loss: 7.7852 - val_acc: 0.2163\n",
+      "Epoch 2/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 6.7649 - acc: 0.3078 - val_loss: 5.9878 - val_acc: 0.3860\n",
+      "Epoch 3/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.6607 - acc: 0.4075 - val_loss: 5.4811 - val_acc: 0.4137\n",
+      "Epoch 4/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.4240 - acc: 0.4200 - val_loss: 5.3443 - val_acc: 0.4285\n",
+      "Epoch 5/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.2984 - acc: 0.4305 - val_loss: 5.2407 - val_acc: 0.4353\n",
+      "Epoch 6/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.2451 - acc: 0.4250 - val_loss: 5.2069 - val_acc: 0.4243\n",
+      "Epoch 7/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.1892 - acc: 0.4342 - val_loss: 5.1545 - val_acc: 0.4440\n",
+      "Epoch 8/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.1366 - acc: 0.4400 - val_loss: 5.1348 - val_acc: 0.4406\n",
+      "Epoch 9/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.1380 - acc: 0.4366 - val_loss: 5.0918 - val_acc: 0.4414\n",
+      "Epoch 10/10\n",
+      "110288/110288 [==============================] - 111s 1ms/step - loss: 5.0810 - acc: 0.4411 - val_loss: 5.0400 - val_acc: 0.4441\n",
+      "est et poires est est est est est est juillet est est est <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD> <PAD>\n"
+     ]
+    }
+   ],
    "source": [
     "def bd_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
     "    \"\"\"\n",
@@ -662,11 +691,40 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    #### Build on previous models\n",
+    "    learning_rate = 0.0001\n",
+    "\n",
+    "    inputs = Input(shape = input_shape[1:])\n",
+    "    hidden = Bidirectional(GRU(output_sequence_length,\n",
+    "                      return_sequences = True))(inputs)\n",
+    "    outputs = Dense(french_vocab_size, \n",
+    "                   activation = 'relu')(hidden)\n",
+    "    \n",
+    "    model = Model(inputs = inputs, outputs = outputs)\n",
+    "    model.compile(loss=sparse_categorical_crossentropy,\n",
+    "                  optimizer=Adam(learning_rate),\n",
+    "                  metrics=['accuracy'])\n",
+    "    \n",
+    "    \n",
+    "    return model\n",
     "tests.test_bd_model(bd_model)\n",
     "\n",
     "\n",
-    "# TODO: Train and Print prediction(s)"
+    "# TODO: Train and Print prediction(s)\n",
+    "# TODO: Reshape the input | Same as Model 1\n",
+    "tmp_x = pad(preproc_english_sentences, max_french_sequence_length)\n",
+    "tmp_x = tmp_x.reshape((-1, preproc_french_sentences.shape[-2], 1))\n",
+    "\n",
+    "# TODO: Train the neural network | Same as Model 1\n",
+    "simple_rnn_model = simple_model(\n",
+    "    tmp_x.shape,\n",
+    "    max_french_sequence_length,\n",
+    "    english_vocab_size +1,\n",
+    "    french_vocab_size+1)\n",
+    "simple_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=10, validation_split=0.2)\n",
+    "\n",
+    "# TODO: Print prediction(s) | Same as Model 1\n",
+    "print(logits_to_text(simple_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))"
    ]
   },
   {
@@ -712,9 +770,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from keras.models import Sequential\n",
+    "\n",
+    "#######\n",
+    "#     __________________________\n",
+    "    \n",
+    "#     model_final = Sequential()\n",
+    "#     #model_final.add(Input(shape = input_shape[1:]))\n",
+    "#     model_final.add(Embedding(input_dim=english_vocab_size, output_dim=output_sequence_length))\n",
+    "#     model_final.add(Bidirectional(GRU(output_sequence_length, return_sequences=True)))#, input_shape=embed))\n",
+    "#     #model_final.add(Bidirectional(LSTM(10)))\n",
+    "#     model_final.add(Dense(french_vocab_size))\n",
+    "#     model_final.add(Activation('relu'))\n",
+    "#     model_final.compile(loss='sparse_categorical_crossentropy', optimizer=Adam(learning_rate))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Wrong output shape. Found output shape (None, 15, 344) using parameters output_sequence_length=21 and french_vocab_size=344",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-ac0034613b5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_model_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_final\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/workspace/project_tests.py\u001b[0m in \u001b[0;36mtest_model_final\u001b[0;34m(model_final)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menglish_vocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m     \u001b[0m_test_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/home/workspace/project_tests.py\u001b[0m in \u001b[0;36m_test_model\u001b[0;34m(model, input_shape, output_sequence_length, french_vocab_size)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_shape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;34m'Wrong output shape. Found output shape {} using parameters output_sequence_length={} and french_vocab_size={}'\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss_functions\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Wrong output shape. Found output shape (None, 15, 344) using parameters output_sequence_length=21 and french_vocab_size=344"
+     ]
+    }
+   ],
    "source": [
     "def model_final(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
     "    \"\"\"\n",
@@ -726,7 +819,26 @@
     "    :return: Keras model built, but not trained\n",
     "    \"\"\"\n",
     "    # TODO: Implement\n",
-    "    return None\n",
+    "    learning_rate = 0.0001\n",
+    "\n",
+    "    inputs = Input(shape = input_shape[1:])\n",
+    "    #layer 1\n",
+    "    embed = Embedding(input_dim =english_vocab_size,\n",
+    "                     output_dim = output_sequence_length)(inputs)\n",
+    "    #layer 2\n",
+    "    hidden = Bidirectional(GRU(output_sequence_length,\n",
+    "                              return_sequences = True))(embed)\n",
+    "    #layer 3\n",
+    "    outputs = Dense(french_vocab_size, \n",
+    "                   activation = 'relu')(hidden)\n",
+    "    \n",
+    "    model_final = Model(inputs = inputs, outputs = outputs)\n",
+    "    model_final.compile(loss=sparse_categorical_crossentropy,\n",
+    "                  optimizer=Adam(learning_rate),\n",
+    "                  metrics=['accuracy'])\n",
+    "    \n",
+    "    \n",
+    "    return model_final\n",
     "tests.test_model_final(model_final)\n",
     "\n",
     "\n",
