--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -82,7 +82,7 @@
       "memory_limit: 268435456\n",
       "locality {\n",
       "}\n",
-      "incarnation: 9186541520146532073\n",
+      "incarnation: 12029118932676502430\n",
       "]\n"
      ]
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,20 +791,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Wrong output shape. Found output shape (None, 15, 344) using parameters output_sequence_length=21 and french_vocab_size=344",
+     "ename": "TypeError",
+     "evalue": "The added layer must be an instance of class Layer. Found: Tensor(\"input_3:0\", shape=(?, 15), dtype=float32)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-ac0034613b5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_model_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_final\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/workspace/project_tests.py\u001b[0m in \u001b[0;36mtest_model_final\u001b[0;34m(model_final)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menglish_vocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m     \u001b[0m_test_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/workspace/project_tests.py\u001b[0m in \u001b[0;36m_test_model\u001b[0;34m(model, input_shape, output_sequence_length, french_vocab_size)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_shape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;34m'Wrong output shape. Found output shape {} using parameters output_sequence_length={} and french_vocab_size={}'\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss_functions\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Wrong output shape. Found output shape (None, 15, 344) using parameters output_sequence_length=21 and french_vocab_size=344"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-ceed0beb2504>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_model_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_final\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/workspace/project_tests.py\u001b[0m in \u001b[0;36mtest_model_final\u001b[0;34m(model_final)\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[0mfrench_vocab_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m344\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 102\u001b[0;31m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_final\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menglish_vocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m     \u001b[0m_test_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_sequence_length\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrench_vocab_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-21-ceed0beb2504>\u001b[0m in \u001b[0;36mmodel_final\u001b[0;34m(input_shape, output_sequence_length, english_vocab_size, french_vocab_size)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mmodel_final\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mmodel_final\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/keras/models.py\u001b[0m in \u001b[0;36madd\u001b[0;34m(self, layer)\u001b[0m\n\u001b[1;32m    424\u001b[0m             raise TypeError('The added layer must be '\n\u001b[1;32m    425\u001b[0m                             \u001b[0;34m'an instance of class Layer. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 426\u001b[0;31m                             'Found: ' + str(layer))\n\u001b[0m\u001b[1;32m    427\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    428\u001b[0m             \u001b[0;31m# first layer in model: check that it is an input layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: The added layer must be an instance of class Layer. Found: Tensor(\"input_3:0\", shape=(?, 15), dtype=float32)"
      ]
     }
    ],
@@ -820,22 +821,49 @@
     "    \"\"\"\n",
     "    # TODO: Implement\n",
     "    learning_rate = 0.0001\n",
-    "\n",
-    "    inputs = Input(shape = input_shape[1:])\n",
-    "    #layer 1\n",
-    "    embed = Embedding(input_dim =english_vocab_size,\n",
-    "                     output_dim = output_sequence_length)(inputs)\n",
-    "    #layer 2\n",
-    "    hidden = Bidirectional(GRU(output_sequence_length,\n",
-    "                              return_sequences = True))(embed)\n",
-    "    #layer 3\n",
-    "    outputs = Dense(french_vocab_size, \n",
-    "                   activation = 'relu')(hidden)\n",
+    "    #inputs = Input(shape = input_shape[1:])\n",
     "    \n",
-    "    model_final = Model(inputs = inputs, outputs = outputs)\n",
+    "    model_final = Sequential()\n",
+    "    \n",
+    "    model_final.add(Input(shape = input_shape[1:]))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    model_final.add(\n",
+    "        Embedding(input_dim=english_vocab_size,\n",
+    "                  output_dim=output_sequence_length))\n",
+    "    \n",
+    "    model_final.add(\n",
+    "        Bidirectional(\n",
+    "            GRU(output_sequence_length,\n",
+    "                return_sequences=True)))\n",
+    "    \n",
+    "    model_final.add(\n",
+    "        Dense(french_vocab_size,\n",
+    "             activation = 'relu'))\n",
+    "    \n",
     "    model_final.compile(loss=sparse_categorical_crossentropy,\n",
     "                  optimizer=Adam(learning_rate),\n",
     "                  metrics=['accuracy'])\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "#     inputs = Input(shape = input_shape[1:])\n",
+    "#     #layer 1\n",
+    "#     embed = Embedding(input_dim =english_vocab_size,\n",
+    "#                      output_dim = output_sequence_length)(inputs)\n",
+    "#     #layer 2\n",
+    "#     hidden = Bidirectional(GRU(output_sequence_length,\n",
+    "#                               return_sequences = True))(embed)\n",
+    "#     #layer 3\n",
+    "#     outputs = Dense(french_vocab_size, \n",
+    "#                    activation = 'relu')(hidden)\n",
+    "    \n",
+    "#     model_final = Model(inputs = inputs, outputs = outputs)\n",
+    "#     model_final.compile(loss=sparse_categorical_crossentropy,\n",
+    "#                   optimizer=Adam(learning_rate),\n",
+    "#                   metrics=['accuracy'])\n",
     "    \n",
     "    \n",
     "    return model_final\n",
@@ -843,7 +871,22 @@
     "\n",
     "\n",
     "print('Final Model Loaded')\n",
-    "# TODO: Train the final model"
+    "# TODO: Train the final model\n",
+    "# TODO: Train and Print prediction(s)\n",
+    "# TODO: Reshape the input | Same as Model 1\n",
+    "tmp_x = pad(preproc_english_sentences, max_french_sequence_length)\n",
+    "tmp_x = tmp_x.reshape((-1, preproc_french_sentences.shape[-2], 1))\n",
+    "\n",
+    "# TODO: Train the neural network | Same as Model 1\n",
+    "simple_rnn_model = simple_model(\n",
+    "    tmp_x.shape,\n",
+    "    max_french_sequence_length,\n",
+    "    english_vocab_size +1,\n",
+    "    french_vocab_size+1)\n",
+    "simple_rnn_model.fit(tmp_x, preproc_french_sentences, batch_size=1024, epochs=10, validation_split=0.2)\n",
+    "\n",
+    "# TODO: Print prediction(s) | Same as Model 1\n",
+    "print(logits_to_text(simple_rnn_model.predict(tmp_x[:1])[0], french_tokenizer))"
    ]
   },
   {
